--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
-        <link rel="shortcut icon" href="/Logo.png">
+        <link rel="shortcut icon" href="Logo.png">
         <title>Recrutements</title>
     </head>
 <body>
     <header>
         <section class="logo">
             <picture>
-                <img src="/Logo.png" alt="logo" height="65px">
+                <img src="Logo.png" alt="logo" height="65px">
             </picture>
             <u><strong>Poketium PvP-Faction Moddé</strong></u>
         </section>
@@ -21,10 +21,10 @@
     <section class="presentation">
         <div class="bvn">
             <p>Hey, bienvenue sur le formulaire de recrutements du serveur Poketium. Si tu est là c'est que tu cherche à nous rejoindre, j'ai tout ce qu'il te faut, tu n'aura as a reflechir des heures sur un bon cv oubien des fassons de donner une belle intention dans un ticket, mais juste à répondre a quelques questions simples et efficaces tout en restant loyal et honnete. <br> <u>Bonne chance à toi et nous esperons te voir a nos cotes bientot !</u><br><br>
-                <img src="/png_20220728_163754_0000.png" alt="banner" height="200px" width="1000px">
+                <img src="png_20220728_163754_0000.png" alt="banner" height="200px" width="1000px">
             </p>
             <center>
-                <a href="/page1.html">
+                <a href="page1.html">
                     <input type="button" value="Next" class="suivant">
                 </a>
             </center>
