--- a/form.html
+++ b/form.html
@@ -5,16 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/Logo.png">
-    <link rel="stylesheet" href="/path/to/dir/formhandler.min.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/formhandler.js@x.x.x/dist/css/formhandler.min.css">
+    <link rel="shortcut icon" href="Logo.png">
     <title>Recrutements</title>
 </head>
 <body>
     <header>
         <section class="logo">
             <picture>
-                <img src="/Logo.png" alt="logo" height="65px">
+                <img src="Logo.png" alt="logo" height="65px">
             </picture>
             <u><strong>Poketium PvP-Faction Moddé</strong></u>
         </section>
@@ -232,13 +230,11 @@
     <br><br>
     <center>
         <!-- <a href="/get.html"> -->
-            <button type="submit" class="suivant">Submit</button>
+            <button href="index.html" type="submit" class="suivant">Submit</button>
         </a>
     </form>
 
         </center>
         <br><br>
-        <script src="//cdn.jsdelivr.net/npm/formhandler.js@x.x.x/dist/js/formhandler.min.js"></script>
-        <script src="/index.js"></script>
 </body>
 </html>
