--- a/page1.html
+++ b/page1.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
-        <link rel="shortcut icon" href="/Logo.png">
+        <link rel="shortcut icon" href="Logo.png">
         <title>Recrutements</title>
     </head>
 <body>
     <header>
         <section class="logo">
             <picture>
-                <img src="/Logo.png" alt="logo" height="65px">
+                <img src="Logo.png" alt="logo" height="65px">
             </picture>
             <u><strong>Poketium PvP-Faction Moddé</strong></u>
         </section>
@@ -34,7 +34,7 @@
     </section>
     
     <center>
-        <a href="/form.html">
+        <a href="form.html">
             <input type="button" value="Commancer !" class="suivant">
         </a>
     </center>
