Added discord embed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <link rel="stylesheet" href="index.css">
         <link rel="shortcut icon" href="Logo.png">
         <title>Recrutements</title>
+
+                    <!-- Embed Disocrd -->
+        
+	<meta name="description" content="Forumulaire de recrutements officiel du serveur PvP-Faction moddé Poketium.">
+	<meta name="title" content="Poketium - Recrutements Staff">
+	<meta name="theme-color" content="#f85f5f">
+    <meta name="og:image" content="Logo.png">
     </head>
 <body>
     <header>
